bk_ida/gobmkida/c3/owl_determine_life
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:2814:7: error: conflicting types for 'owl_determine_life'
void  owl_determine_life( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:159:13: note: previous declaration is here
static void owl_determine_life(struct local_owl_data *owl,
            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:3014:5: error: assigning to 'struct eyevalue' from incompatible type 'int'
*v9 = 0; 
    ^ ~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:3470:6: error: use of undeclared identifier 'byte_9C689F'
&& ( byte_9C689F[vital_point] == 3 || !owl->goal[vital_point - 1]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:3471:6: error: use of undeclared identifier 'byte_9C688C'
&& ( byte_9C688C[vital_point] == 3 || !owl->goal[vital_point - 20]) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:3685:4: error: expected expression
&& ::does_attack( libs, str[0]) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/engine/owl.c:3713:6: error: expected expression
if ( ::does_attack( libs, str[0]) ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_determine_life/src/obj/1/owl.o] Error 1
